# choreos

./: Cargo.toml
choreos-core/: Cargo.toml
choreos-emvg/: Cargo.toml
choreos-emvg/gstreamer.freedesktop.org/documentation/application-development/: index.html
choreos-emvg/src/: main.rs
